--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,7 +122,7 @@ jobs:
       - name: Check if initial release
         if:  needs.get-versions.outputs.LATEST_TAG == ''        
         run: |
-          echo "MANUAL_VERSION=${{needs.get-versions.outputs.PR_BASE_TAG}}-rc.0" | tee -a "$GITHUB_STEP_SUMMARY" | tee -a "$GITHUB_ENV"
+          echo "MANUAL_VERSION=${{needs.get-versions.outputs.PR_BASE_TAG}}.0-rc.0" | tee -a "$GITHUB_STEP_SUMMARY" | tee -a "$GITHUB_ENV"
       - name: Set semver info
         id: set-semver-info
         if:  needs.get-versions.outputs.LATEST_TAG != ''        
