--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,11 +95,6 @@ jobs:
         run: |
           echo "Just run a build on sha ${{ github.sha }} with no delivery/release artifacts"
 
-# Before calling this a release or prerelease build DO WE still need to check the state of pulls that match the ${{ env.PR_BASE_REF }}?
-# We need to find the latest tag that matches the ${{ env.PR_BASE_REF }}
-# To do this, we need to strip the 'release-' from the ref and find the latest repo.tag
-# Finding base tag name above as ${{ env.PR_BASE_TAG }}
-
       - name: Create Prerelease Candidate Build
         if: needs.get-versions.outputs.IS_PRE_RELEASE == 'True'
         id: prerelease-build
@@ -140,7 +135,7 @@ jobs:
           echo "Next version: ${{ env.MANUAL_VERSION }}" | tee -a "$GITHUB_STEP_SUMMARY"
       - name: Create new release
         id: create_release
-        uses: fiddlermikey/action-create-release@pre
+        uses: keyfactor/action-create-release@v3
         env:
           MANUAL_VERSION: "${{ env.MANUAL_VERSION }}"
         with:
