--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
         run: |
           latestTag=`git fetch --tags && git tag --sort=-v:refname | grep ${{ env.PR_BASE_TAG }}\. | head -n 1`
           echo "LATEST_TAG=$latestTag"  | tee -a "$GITHUB_OUTPUT"
-          hf=$( ["$latestTag" == "${{ env.PR_BASE_TAG }}."*] && echo "True" || echo "False" )
+          hf=$( [ $latestTag == "${{ env.PR_BASE_TAG }}."* ] && echo "True" || echo "False" )
           echo "IS_HOTFIX=$hf" | tee -a "$GITHUB_OUTPUT" | tee -a $GITHUB_STEP_SUMMARY
 
       - name: Display PR_BASE_REF
