Set LATEST_VERSION dependent on hotfix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,8 +60,13 @@ jobs:
           latestReleaseTag=`git fetch --tags && git tag --sort=v:refname | head -n 1`
           latestTag=`git fetch --tags && git tag --sort=v:refname | grep "${{ env.PR_BASE_TAG }}\." | head -n 1`
           echo "LATEST_TAG=$latestTag"  | tee -a "$GITHUB_OUTPUT"
-          hf=$( [[ $latestTag != latestReleaseTag ]] && echo "True" || echo "False" )
-          echo "IS_HOTFIX=$hf" | tee -a "$GITHUB_OUTPUT" | tee -a $GITHUB_STEP_SUMMARY
+          if [[ $latestTag != latestReleaseTag ]]; then
+						echo "IS_HOTFIX=True" | tee -a "$GITHUB_OUTPUT" | tee -a $GITHUB_STEP_SUMMARY;
+          	echo "LATEST_TAG=$latestReleaseTag"  | tee -a "$GITHUB_OUTPUT";
+					else
+						echo "IS_HOTFIX=False" | tee -a "$GITHUB_OUTPUT" | tee -a $GITHUB_STEP_SUMMARY;
+          	echo "LATEST_TAG=$latestTag"  | tee -a "$GITHUB_OUTPUT";
+					fi
 
       - name: Display PR_BASE_REF
         if: github.event_name == 'pull_request'
