--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -159,4 +159,4 @@ jobs:
           tag_name: ${{ env.MANUAL_VERSION }}
           auto_increment_type: ${{ (env.IS_PRE_RELEASE == 'True') && 'prerelease' || 'patch' }}
           tag_schema: semantic
-          commitish: ${{ github.sha }}
+#          commitish: ${{ github.sha }}
